--- a/src/template.html
+++ b/src/template.html
@@ -7,17 +7,13 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="nav">
             <button>Home</button>
             <button>Menu</button>
             <button>About</button>
         </nav>
     </header>
     <div id="content">
-        <!-- <h1>Welcome to Gourmet Delights</h1>
-        <p>At Gourmet Delights, we believe in the art of fine dining. Our menu features a curated selection of dishes, each crafted with the freshest ingredients and a passion for culinary excellence.</p>
-        <p>Join us for an unforgettable dining experience where every meal is a celebration of flavor, creativity, and tradition. Whether you're here for a casual lunch, a romantic dinner, or a special occasion, Gourmet Delights promises to deliver an exceptional experience.</p>
-        <p>We look forward to welcoming you and making your dining experience truly memorable.</p> -->
     </div>
 </body>
 </html>
